--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 <body>
   Hello World!
+  
+  Pong Game: <a href="http://heyaliciax.github.io/Pong/"> http://heyaliciax.github.io/Pong/ </a>
+  Writeup: <a href="http://heyaliciax.github.io/Pong/writeup.html"> http://heyaliciax.github.io/Pong/writeup.html </a>
 </body>
 
 </html>
